@@ -381,4 +381,68 @@ Written by
 		<template name="evt_connect_OnUpdateUI">this->Connect( wxEVT_UPDATE_UI, #handler );</template>
 	</templates>
 
+	<templates class="MenuBar">
+		<template name="base">
+			#ifnotnull $subclass/name
+			@{ public $subclass/name @}
+
+			#ifnull $subclass/name
+			@{ public wxMenuBar @}
+		</template>
+		<template name="cons_decl">
+			$name( long style = $window_style );
+		</template>
+		<template name="cons_def">
+			$name::$name( long style ) : 
+
+			#ifnotnull $subclass/name
+			@{ $subclass/name @}
+
+			#ifnull $subclass/name
+			@{ wxMenuBar@}( style )
+		</template>
+		<template name="include">@#include &lt;wx/menu.h&gt;</template>
+	</templates>
+
+	<templates class="ToolBar">
+		<template name="base">
+			#ifnotnull $subclass/name
+			@{ public $subclass/name @}
+
+			#ifnull $subclass/name
+			@{ public wxToolBar @}
+		</template>
+		<template name="cons_decl">
+			$name( wxWindow* parent, wxWindowID id = $id, const wxPoint&amp; pos = $pos, const wxSize&amp; size = $size, long style = $window_style #ifnotnull $window_name @{, const wxString&amp; name = $window_name @} );
+		</template>
+		<template name="cons_def">
+			$name::$name( wxWindow* parent, wxWindowID id, const wxPoint&amp; pos, const wxSize&amp; size, long style#ifnotnull $window_name @{, const wxString&amp; name@} ) :
+
+			#ifnotnull $subclass/name
+			@{ $subclass/name @}
+
+			#ifnull $subclass/name
+			@{ wxToolBar@}( parent, id, pos, size, style#ifnotnull $window_name @{, name@} )
+		</template>
+		<template name="include">@#include &lt;wx/toolbar.h&gt;</template>
+		<template name="settings">
+			#ifnotnull $bitmapsize @{SetToolBitmapSize( $bitmapsize ); #nl @}
+
+			#ifnotnull $separation
+			@{
+			  #ifnotequal $separation "5"
+			  @{ SetToolSeparation( $separation ); #nl @}
+			@}
+
+			#ifnotnull $margins @{ SetMargins( $margins ); #nl @}
+
+			#ifnotnull $packing
+			@{
+				#ifnotequal $packing "1"
+				@{ SetToolPacking( $packing ); #nl @}
+			@}
+    		</template>
+    		<template name="after_addchild">#nl Realize();</template>
+	</templates>
+
 </codegen>
